# firstcpp

./: .gitignore  CMakeLists.txt  README.md  plot_ball.gp  simulation_data.csv
include/: math_utils.h  physics_engine.h  user.h
src/: main.cpp  math_utils.cpp  physics_engine.cpp
